# idonthaveyourtime

./: .gitignore  .gitmodules  AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/: e2e_sample.m4a
app/src/androidTest/java/io/morgan/idonthaveyourtime/: E2eProcessingChainInstrumentedTest.kt  GoogleAiEdgeTranscriptionBenchmarkInstrumentedTest.kt  ProcessingInstrumentationTestSupport.kt  ShareIntentParserInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/morgan/idonthaveyourtime/: IdonthaveyourtimeApp.kt  MainActivity.kt  ShareIntentParser.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
core/audio/: build.gradle.kts
core/audio/src/main/kotlin/io/morgan/idonthaveyourtime/core/audio/: EnergyVadSpeechSegmenterLocalDataSource.kt  MediaCodecAudioConverterLocalDataSource.kt  WavAudioSampleReaderLocalDataSource.kt  WavSegmentReader.kt
core/audio/src/main/kotlin/io/morgan/idonthaveyourtime/core/audio/di/: AudioDataSourceModule.kt
core/audio/src/test/kotlin/io/morgan/idonthaveyourtime/core/audio/: EnergyVadSegmenterTest.kt  MediaCodecAudioConverterMathTest.kt  WavAudioSampleReaderLocalDataSourceTest.kt
core/common/: build.gradle.kts
core/common/src/main/kotlin/io/morgan/idonthaveyourtime/core/common/: Errors.kt
core/data/: build.gradle.kts
core/data/src/main/kotlin/io/morgan/idonthaveyourtime/core/data/di/: DataModule.kt  DispatchersModule.kt  DispatchersQualifiers.kt  NetworkModule.kt  SummarizerEngineQualifiers.kt
core/data/src/main/kotlin/io/morgan/idonthaveyourtime/core/data/mapper/: SessionMapper.kt
core/data/src/main/kotlin/io/morgan/idonthaveyourtime/core/data/repository/: DefaultAudioImportRepository.kt  DefaultAudioProcessingRepository.kt  DefaultModelRepository.kt  DefaultProcessingConfigRepository.kt  DefaultProcessingQueueRepository.kt  DefaultSummarizationRepository.kt  DefaultTranscriptionRepository.kt  RoomSessionRepository.kt
core/data/src/main/kotlin/io/morgan/idonthaveyourtime/core/data/worker/: DownloadModelWorker.kt  ModelDownloadService.kt  ProcessSessionWorker.kt
core/data/src/test/kotlin/io/morgan/idonthaveyourtime/core/data/repository/: RoomSessionRepositoryTest.kt
core/data/src/test/kotlin/io/morgan/idonthaveyourtime/core/data/worker/: DownloadModelWorkerTest.kt
core/database/: build.gradle.kts
core/database/src/main/kotlin/io/morgan/idonthaveyourtime/core/database/: AppDatabase.kt
core/database/src/main/kotlin/io/morgan/idonthaveyourtime/core/database/dao/: ChunkSummaryDao.kt  SessionDao.kt  TranscriptSegmentDao.kt
core/database/src/test/kotlin/io/morgan/idonthaveyourtime/core/database/: AppDatabaseContractTest.kt
core/designsystem/: build.gradle.kts
core/designsystem/src/main/kotlin/io/morgan/idonthaveyourtime/core/designsystem/: IdonthaveyourtimeTheme.kt
core/domain/: build.gradle.kts
core/llm/: build.gradle.kts
core/llm/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
core/llm/src/main/kotlin/io/morgan/idonthaveyourtime/core/llm/: GoogleAiEdgeTranscriptionEngineLocalDataSource.kt  GoogleAiEdgeTranscriptionPromptFactory.kt  LiteRtLmSummarizerEngineLocalDataSource.kt  LlamaCppSummarizerEngineLocalDataSource.kt  LlamaCppSummarizerLocalDataSource.kt  LlamaJni.kt  LlamaLibraryLoader.kt  MediaPipeLlmInferenceSummarizerEngineLocalDataSource.kt  StreamingTextAccumulator.kt  SummarizationPromptFactory.kt
core/llm/src/test/kotlin/io/morgan/idonthaveyourtime/core/llm/: GoogleAiEdgeTranscriptionEngineCapabilityTest.kt  GoogleAiEdgeTranscriptionPromptFactoryTest.kt  SummarizerEngineCapabilityTest.kt
core/model/src/main/kotlin/io/morgan/idonthaveyourtime/core/model/: AudioSegment.kt  ChunkSummary.kt  ImportedAudio.kt  LanguageHint.kt  ModelAvailability.kt  ModelId.kt  ProcessingConfig.kt  ProcessingLimits.kt  ProcessingSession.kt  ProcessingStage.kt  RemoteModelDownloadState.kt  SegmentationConfig.kt  SessionTranscriptionDiagnostics.kt  SharedAudioInput.kt  SuggestedModel.kt  SummarizerEngineCapability.kt  SummarizerEngineProbeResult.kt  SummarizerModelFormat.kt  SummarizerRuntime.kt  Summary.kt  SummaryFormat.kt  Transcript.kt  TranscriptSegment.kt  TranscriptionEngineCapability.kt  TranscriptionEngineProbeResult.kt  TranscriptionMetrics.kt  TranscriptionModelFormat.kt  TranscriptionRequest.kt  TranscriptionResult.kt  TranscriptionRuntime.kt  WavAudio.kt  WhisperModelSize.kt
core/testing/: build.gradle.kts
core/whisper/: build.gradle.kts
core/whisper/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
core/whisper/src/main/kotlin/io/morgan/idonthaveyourtime/core/whisper/: WavAudioSampleReaderLocalDataSource.kt  WavPcm16Reader.kt  WavSegmentReader.kt  WhisperCpuConfig.kt  WhisperJni.kt  WhisperLibraryLoader.kt  WhisperTranscriptionEngineLocalDataSource.kt
feature/summarize/api/: build.gradle.kts
feature/summarize/impl/: build.gradle.kts
feature/summarize/impl/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+78 files in other folders)
